--- a/pages/my/my-org/my-org.wxss
+++ b/pages/my/my-org/my-org.wxss
@@ -15,7 +15,7 @@
   margin-bottom: 20rpx;
   background-color: white;
   color: #999999;
-  border-radius: 0rpx;
+  border-radius: 60rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,7 +77,7 @@
 } */
 
 .org-wrap {
-  margin-top: 150rpx
+  /* margin-top: 50rpx */
 }
 
 .org-wrap .org-avator {
