--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -3,12 +3,12 @@
 <!--活动名称-->
 <view class="act-header">
     <text class="text">{{actInfo.name}}</text>
-    <block wx:if="{{!hasJoined}}">
+    <view wx:if="{{!hasJoined}}" hover-class="weui-cell_active">
       <button class='joinBtn' bindtap='joinAct'>报名</button>
-    </block>
-    <block wx:elif="{{hasJoined}}">
+    </view>
+    <view wx:elif="{{hasJoined}}" hover-class="weui-cell_active">
       <button class='joinBtn' bindtap='exitAct'>取消报名</button>
-    </block>
+    </view>
 </view>
 
 
@@ -35,15 +35,15 @@
       <view wx:if="{{isManager}}" slot="footer">
         <view class="bottom-right" bind:tap="goParticipants">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
-                  <text class="txt" style="font-size: 35rpx;"> 查看参与者</text>
+                  <view style="font-size: 35rpx;" hover-class="weui-cell_active">查看参与者</view>
         </view>
         <view class="bottom-right" bind:tap="editAct">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
-                  <text class="txt" style="font-size: 35rpx;"> 编辑活动</text>
+                  <view style="font-size: 35rpx;" hover-class="weui-cell_active">编辑活动</view>
         </view>
         <view class="bottom-right" bind:tap="deleteAct">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
-                  <text class="txt" style="font-size: 35rpx;"> 删除活动</text>
+                  <view style="font-size: 35rpx;" hover-class="weui-cell_active">删除活动</view>
         </view>
       </view>
     </i-card>
@@ -53,8 +53,8 @@
 <!--评论区-->
 <view class="comment-header">
       <text class="txt">评论区</text>
-      <view class="right" bindtap="goCreateComment">
-        <text class="right-txt" style="font-size: 35rpx;">新建评论</text>
+      <view class="right" bindtap="goCreateComment" hover-class="weui-cell_active">
+        <view class="right-txt" style="font-size: 35rpx;"  >新建评论</view>
         <!-- <image class="arrow" src="/icon/rightArrow.png"></image> -->
         <i-icon type="add" />
       </view>
@@ -74,11 +74,11 @@
         <view slot="footer">
           <view wx:if="{{item.user.id == userId}}" class="bottom-right" bind:tap="goEditComment" data-comment-id="{{item.id}}">
             <i-icon type="editor" />
-            <text class="txt" style="font-size: 35rpx;"> 编辑</text>
+            <view class="txt" style="font-size: 35rpx;" hover-class="weui-cell_active"> 编辑</view>
           </view>
           <view wx:if="{{item.user.id == userId || isManager}}" class="bottom-right" bind:tap="delComment" data-comment-id="{{item.id}}">
             <i-icon type="delete" />
-            <text class="txt" style="font-size: 35rpx;"> 删除</text>
+            <view class="txt" style="font-size: 35rpx;" hover-class="weui-cell_active"> 删除</view>
         </view>
       </view>
       </i-card>
