--- a/pages/sections/org-list/org-list.wxml
+++ b/pages/sections/org-list/org-list.wxml
@@ -1,13 +1,13 @@
 <!--pages/sections/org-list/org-list.wxml-->
 
 <!--板块名称-->
-<view class="forum-header">
+<!-- <view class="forum-header">
     <text class="text">{{forumName}}板块</text>
-</view>
+</view> -->
 
 <!--创建组织按钮-->
 <view class="found-org">
-    <button class='btn' bindtap='goFoundOrg'>
+    <button class='btn' bindtap='goFoundOrg' hover-class="weui-cell_active">
         <image class='btnImg' src='/icon/found_org.png'></image>
         <view>申请创建组织</view>
     </button>
