--- a/pages/my/my-account/my-account.wxss
+++ b/pages/my/my-account/my-account.wxss
@@ -15,3 +15,12 @@ van-button {
 .van-cell__title {
   width: 30%;
 }
+
+.valueleft .van-cell__value{
+  min-width: 70%;
+  display: inline-block;
+  text-align: left;
+  word-break: break-all;
+  color: black
+}
+
