--- a/pages/follows/follows-home/follows-home.wxml
+++ b/pages/follows/follows-home/follows-home.wxml
@@ -26,7 +26,7 @@
       <block wx:else> 
         <image class="org-avator" src="/icon/person.png"></image>
       </block>
-      <text class="org-name">{{item.name.length <= 6 ? item.name : ut.sub(item.name) + "…"}}</text>
+      <text class="org-name">{{item.org.name.length <= 6 ? item.org.name : ut.sub(item.org.name) + "…"}}</text>
     </view>
   </view>
 </view>
@@ -84,9 +84,8 @@
         <view slot="content">
           <text calss="title">{{item.name}}</text>
           <view class="org_time"><span class="_infor_head">时间：</span> {{item.begin_time ? item.begin_time: "暂无信息"}} 至 {{item.end_time ? item.end_time: "暂无信息"}}</view>
-          <!-- TODO-->
-          <!-- <view class="place"><span class="_infor_head">地点：</span> {{item.location ? item.location.name : "暂无信息"}}</view> -->
-          <view class="place"><span class="_infor_head">类别：</span>{{item.type.name}}</view>
+          <view class="place"><span class="_infor_head">地点：</span> {{item.location ? item.location.name : "暂无信息"}}</view>
+          <view class="place"><span class="_infor_head">类别：</span> {{item.type.name}}</view>
           <view class="body"><span class="_infor_head">简介：</span>{{item.description != "" ? item.description : "无"}}</view>
         </view>
         <!-- <view slot="footer">
