--- a/pages/my/new-act/new-act.wxml
+++ b/pages/my/new-act/new-act.wxml
@@ -37,6 +37,9 @@
     <i-input bind:change="inputDescriptionHandler" maxlength="50" title="活动描述(可选)" placeholder="{{actInfo.description ? actInfo.description : '请输入活动描述'}}" />
     <i-input bind:change="inputNumPeopleHandler" maxlength="3" type="number" title="最大人数" placeholder="{{actInfo.contain ? actInfo.contain : '请输入正整数'}}" />
 
+    <i-input bind:tap="toMap" disabled title="活动地点" value="点击选择"/>
+    <i-input bind:change="inputLocationTextHandler" maxlength="50" title="详细地址" placeholder="{{actInfo.location ? actInfo.location.name : '请输入详细地址'}}" />
+
     <view class="weui-cell weui-cell_active weui-cell_select weui-cell_select-after">
         <view class="weui-cell__hd">
             <label class="weui-label" style="width: 3em">类别</label>
@@ -107,4 +110,5 @@
     </view> -->
 
 </i-panel>
+
 <a class="weui-btn weui-btn_primary" bindtap="submitAct">提交</a>
