--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -66,12 +66,13 @@
   </view>
 </view>
 
-<view wx:if="{{current == 'tab2'}}">
-  <map id="myMap"
+<block wx:if="{{current == 'tab2'}}">
+  <map id="indexMap"
     style="width: 100%; height: 100%;"
     latitude="{{latitude}}"
     longitude="{{longitude}}"
     markers="{{markers}}"
+    bindmarkertap="goMarker"
     show-location
   ></map>
-</view>
+</block>
