--- a/pages/sections/act-detail/new-comment/new-comment.wxml
+++ b/pages/sections/act-detail/new-comment/new-comment.wxml
@@ -11,7 +11,7 @@
   </view>
 </view>
 
-<view class="rate-wrap">
+<view class="rate-wrap" wx:if="{{mustRate}}">
   <view class="txt">评分</view>
   <van-rate custom-class="rate" model:value="{{ rate}}" bind:change="onChange" size="{{ 25 }}" allow-half void-icon="star"/>
 </view>
