--- a/pages/my/my-act/my-act.wxml
+++ b/pages/my/my-act/my-act.wxml
@@ -1,10 +1,12 @@
 <!--pages/my/my-act/my-act.wxml-->
 
+<van-search placeholder="搜索管理的活动（id/名称）" shape="round" bind:search="onSearch" bind:change="onChange" bind:clear="onClear" bind:cancel="onClear"/>
 <i-tabs current="{{ current }}" color="#f759ab" bindchange="handleChange">
     <i-tab key="unstart" title="未开始"></i-tab>
     <i-tab key="cur" title="进行中"></i-tab>
     <i-tab key="end" title="已结束"></i-tab>
 </i-tabs>
+
 <view wx:if="{{current == 'cur'}}">
     <i-cell-group i-class="act-wrap">
         <block wx:for="{{curActList}}" wx:key="id">
