--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -17,6 +17,7 @@
     <i-card i-class="card-demo card-demo-full"  full
       title="{{actInfo.owner.name}}" extra="发布者" thumb="{{actInfo.owner.avatar}}" bindtap="goOwner">  
       <view slot="content">
+        <view class="organizer" wx:if="{{actInfo.org != null}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">活动id：</span>{{actId}}</view>
         <view class="organizer" wx:if="{{actInfo.org != null}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">所属组织：{{actInfo.org.name}}</span></view>
         <view class="organizer" wx:if="{{actInfo.block != null}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goBlock">所属版块：{{actInfo.block.name}}</span></view>
 
