--- a/pages/sections/act-detail/act-detail.wxss
+++ b/pages/sections/act-detail/act-detail.wxss
@@ -10,7 +10,7 @@
 }
 
 .act-header .joinBtn{
-  width: 200rpx;
+  width: 100rpx;
   height: 60rpx;
   background-color: rgba(19, 173, 245, 0.548);
   color: white;
@@ -25,7 +25,7 @@
 }
 
 .act-header .unJoinBtn{
-  width: 150rpx;
+  width: 200rpx;
   height: 60rpx;
   background-color: rgba(19, 173, 245, 0.548);
   color: white;
@@ -146,4 +146,19 @@
 
 .owner {
   height: 5rpx;
+}
+
+.middleBtn {
+  width: 100rpx;
+  height: 60rpx;
+  background-color: rgba(19, 173, 245, 0.548);
+  color: white;
+  border-radius: 49rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 30rpx;
+  writing-mode: vertical-lr;
+  margin-right: 0%;
 }
