--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -56,7 +56,7 @@
   flex-shrink: 0;
 }
 
-.org-wrap .org-item .org-avator {
+.org-wrap .org-item .org-avatar {
   border-radius: 50%;
   display: block;
   height: 101rpx;
