--- a/pages/my/my-org/my-org.wxss
+++ b/pages/my/my-org/my-org.wxss
@@ -80,7 +80,7 @@
   /* margin-top: 50rpx */
 }
 
-.org-wrap .org-avator {
+.org-wrap .org-avatar {
   border-radius: 50%;
   /* width: 40rpx;
   height: 40rpx; */
