--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -99,7 +99,7 @@
       </i-card>
     </view>
     <view class="msg-item" wx:for="{{comment_list}}" wx:key='id'>
-      <i-card i-class="card-demo" title="{{item.user.name}}" extra="{{item.publish_time}}" thumb="{{item.user.avator}}">
+      <i-card i-class="card-demo" title="{{item.user.name}}" extra="{{item.publish_time}}" thumb="{{item.user.avatar}}">
         <view slot="content">
           <view>{{item.content}}</view>
           <view wx:if="{{hasBegun && item.score != 0}}">
