--- a/pages/sections/org-list/org-list.wxml
+++ b/pages/sections/org-list/org-list.wxml
@@ -77,7 +77,7 @@
     <block wx:for="{{forumInfo}}" wx:key="id">
         <i-cell title="{{item.name}}" label="{{item.description}}" is-link bindtap="goOrg" 
         data-orgid="{{item.id}}" data-orgname="{{item.name}}">
-            <image class="org-avator" src="/icon/person.png"  slot="icon"></image>
+            <image class="org-avatar" src="{{item.avatar ? item.avatar : '/icon/person.png'}}"  slot="icon"></image>
         </i-cell> 
     </block>
 </i-cell-group>
