--- a/pages/sections/act-list/act-list.wxml
+++ b/pages/sections/act-list/act-list.wxml
@@ -32,7 +32,14 @@
       <view class='detail'><span class="_infor_head">创建时间：</span>{{orgInfo.create_time}}</view>
       <view class='detail'><span class="_infor_head">负责人：</span>{{orgInfo.owner.name}}</view>
       <view class='detail detail-last'><span class="_infor_head">介绍：</span>{{orgInfo.description ? orgInfo.description : "暂无"}}</view>
+
+        <button class='editBtn' bindtap='bindQRCodeButton' style="width:30%; margin-left: 50rpx;">{{showQRCode ? '隐藏二维码' :'显示二维码'}}</button>
+        <view wx:if="{{showQRCode && qrcode != ''}}">
+            <image src="{{qrcode}}" class="qrcode"/>
+        </view>
+
     </block>
+    
     
     <button class='editBtn' bindtap='editOrgInfo' wx:if="{{isManager && showIndex[0]}}" hover-class="weui-cell_active">编辑</button>
   </view>
