--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -15,11 +15,11 @@
 <!--活动信息-->
 <view class="msg-item">
     <i-card i-class="card-demo card-demo-full"  full
-      title="{{actInfo.owner.name}}" extra="发布者" thumb="{{actInfo.owner.avatar}}" bindtap="goOwner">  
+      title="{{actInfo.org ? actInfo.org.name : actInfo.owner.name}}" extra="发布者" thumb="{{actInfo.org ? actInfo.org.avatar : actInfo.owner.avatar}}" bindtap="goOwner">  
       <view slot="content" catchtap="empty">
-        <view class="organizer" wx:if="{{actInfo.org != null}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">活动id：</span>{{actId}}</view>
-        <view class="organizer" wx:if="{{actInfo.org != null}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">所属组织：{{actInfo.org.name}}</span></view>
-        <view class="organizer" wx:if="{{actInfo.block != null}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goBlock">所属版块：{{actInfo.block.name}}</span></view>
+        <view class="organizer" wx:if="{{actInfo.org}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">活动id：</span>{{actId}}</view>
+        <view class="organizer" wx:if="{{actInfo.org}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goOrg">所属组织：{{actInfo.org.name}}</span></view>
+        <view class="organizer" wx:if="{{actInfo.block}}"><span class="_infor_head" hover-class="weui-cell_active" bindtap="goBlock">所属版块：{{actInfo.block.name}}</span></view>
 
         <view class="organizer"><span class="_infor_head">发布时间：</span>{{pub_time}}</view>
 
@@ -36,11 +36,12 @@
         <!-- <view class="organizer"><span class="_infor_head">加入需要审核：</span>{{actInfo.review ? "是": "否"}}</view> -->
         <view class="organizer" wx:if="{{hasBegun}}"><span class="_infor_head">平均评分：</span><van-rate custom-class="rate" readonly allow-half model:value="{{ avg_score }}" size="{{ 20 }}"/> </view>
 
-        
-
+        <view wx:if="{{actInfo.avatar && actInfo.avatar != ''}}">
+          <image src="{{actInfo.avatar}}" class="act-avatar" mode="widthFix" style="width: 500rpx; border-radius: 0; margin-top: 50rpx;"></image>
+        </view>
   
       </view>
-      <view wx:if="{{isManager}}" slot="footer">
+      <view wx:if="{{isManager}}" slot="footer" catchtap="empty">
         <view class="bottom-right" bind:tap="goParticipants">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
                   <view style="font-size: 35rpx;" hover-class="weui-cell_active">查看参与者</view>
